<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <TextView
        android:id="@+id/resultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_won"
        android:textSize="24sp"
        android:gravity="center"
        android:padding="20dp"/>

    <TextView
        android:id="@+id/secondsUsed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_used"
        android:textSize="18sp"
        android:gravity="center"
        android:padding="20dp"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="18sp"
        android:gravity="center"
        android:padding="20dp"/>

    <Button
        android:id="@+id/restartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/return_to_landing"
        android:textSize="18sp"
        android:padding="10dp"
        android:layout_gravity="center"/>
</LinearLayout>
