<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/mineCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mines_remaining"
            android:textSize="18sp"
            android:layout_weight="1"
            android:gravity="start" />

        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_elapsed"
            android:textSize="18sp"
            android:layout_weight="1"
            android:gravity="end" />

    </LinearLayout>

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:columnCount="10"
        android:rowCount="12"
        android:padding="0dp"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/modeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mode_digging"
        android:layout_gravity="center_horizontal"
        android:textSize="16sp"
        android:padding="10dp" />
</LinearLayout>
